--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,59 @@ data/processed/
 .pytest_cache/
 .coverage
 htmlcov/
+
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Next.js
+/.next/
+/out/
+
+# Production
+/build
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
+.env
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Google Cloud
+google-service-account.json
+cors.json
+lifecycle.json
+
+# VS Code
+.vscode/settings.json
+
+# Logs
+logs
+*.log
+
+# IDEs
+.idea
+*.swp
+*.swo
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
